# vacancies

./: .env.example  .flake8  README.md  main_for_db.py  pyproject.toml
data/: vacancies.json
htmlcov/: index.html
logs/: decorators.logs
src/: base_models.py  db_manager.py  hh_api_interaction.py  iterator.py  logging_api.py  logging_vacancies.py  logging_vacancy.py  main.py  mine.py  my_mine.py  vacancies.py  vacancy.py  vacancy_proc.py
tests/: alter_main.py  test_api_response.py  test_iterator.py  test_vacancies.py  test_vacancy.py
