[tool.poetry]
name = "vacancies"
version = "0.1.0"
description = "Проект для работы с вакансиями: парсинг, анализ и управление данными о вакансиях"
authors = ["Aleksey Zvyagintsev <alex0236889@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
click = {version = "^8.2.1", python = ">=3.10"}
coverage = "^7.8.2"
pluggy = "^1.6.0"
typing-extensions = "^4.14.0"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=3.0.0,<4.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"
requests = "^2.32.3"
pytest = "^8.3.4"
pytest-cov = "^6.2.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = ['venv', '.venv', 'tests', '__pycache__']
check_untyped_defs = true
strict = true
warn_unreachable = true

[tool.isort]
# максимальная длина строки
line_length = 119
multi_line_output = 1

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.mypy_cache
    | \.venv
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''
